Corrected UI error causing profile tilte to hide behind the header when on mobile view.

--- a/EmpleoDotNet/Content/css/theme/style.css
+++ b/EmpleoDotNet/Content/css/theme/style.css
@@ -1857,6 +1857,10 @@ header {
 		.color2 {
 			background: url(../images/background.jpg);
 		}
+        
+        .page-content{
+            margin-top: 50px;
+        }
 
 		#contact div[class*="col"],
 		#prefooter div[class*="col"] {
